--- a/insurance/index.html
+++ b/insurance/index.html
@@ -7,7 +7,7 @@
 </style>
 </head>
 <body>
-<div id="bg" style="position:absolute; top:0px; left:0px; width:320px; height:460px;"></div>
+<div id="bg" style="position:absolute; top:0px; left:0px; width:320px; height:500px; background:grey"></div>
 
 
 	<script type="text/javascript">
