this is new master

--- a/agency/insurance/scripts/richMedia/expanded2.html
+++ b/agency/insurance/scripts/richMedia/expanded2.html
@@ -35,7 +35,7 @@ $(function() {
 
 	$('#end_frame').click(function(){
 		console.log('$(#end_frame).click');
-		window.open('http://admaxim.com');
+		window.open('http://m.vodafone.hu/mobiltarifak/red');
 
 	});
 
