--- a/agency/simonly/scripts/richMedia/expanded2.html
+++ b/agency/simonly/scripts/richMedia/expanded2.html
@@ -37,7 +37,7 @@ $(function() {
 
 	$('#end_frame').click(function(){
 		console.log('$(#end_frame).click');
-		window.open('http://admaxim.com');
+		window.open('http://m.vodafone.hu/aktualis-ajanlatok/valts/vodafone-red');
 
 	});
 
