--- a/agency/insurance/index.html
+++ b/agency/insurance/index.html
@@ -32,11 +32,11 @@
 
 
 
+		var clickid = getUrlVar('clickid');
+		var appid = getUrlVar('appid');
 
-
-
-
-
+		var admaxim_clickid = (typeof clickid != "undefined") ? clickid : "test_clickid";
+		var admaxim_appid = (typeof appid != "undefined") ? appid : "test_appid";
 
 
 		var standalone = getUrlVar('standalone');
