--- a/agency/simonly/scripts/richMedia/expanded2.html
+++ b/agency/simonly/scripts/richMedia/expanded2.html
@@ -16,6 +16,19 @@
 
 <script>
 
+var trackingEnabled = false;
+
+
+var _gaq = _gaq || [];
+_gaq.push(['admaxim_tracking._setAccount', 'UA-37035980-1']);
+_gaq.push(['admaxim_tracking._trackPageview']);
+
+(function() {
+	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+
 $(function() {
 
 	var page_scale = (320/768);
@@ -37,6 +50,7 @@ $(function() {
 
 	$('#end_frame').click(function(){
 		console.log('$(#end_frame).click');
+		trackEvent('click_to_vodafone');
 		window.open('http://m.vodafone.hu/aktualis-ajanlatok/valts/vodafone-red');
 
 	});
@@ -56,6 +70,7 @@ $(function() {
 		'width':'123px', 'height': '205px', 'top':'666px', 'left':'293px' });
 
 	$('#simBtn').click(function(){
+		trackEvent('sim_click');
 		$('#sim_holder').hide();
 
 		$('#card_bg').animate({opacity:0},{duration:1000});
@@ -74,6 +89,7 @@ $(function() {
 	      		setTimeout(function(){
 	      			$('#end_frame').css({'display':'block'});
 	      			$('#end_frame').animate({opacity:1},{duration:1000});
+	      			trackEvent('show_endframe');
 	      		}, 500);
 	    	}
 		});	
@@ -82,11 +98,34 @@ $(function() {
 	});
 
 
+	function trackEvent (event_description) {
 
+		var eventCatigory = "vodafone_mito_simonly";
+		var eventLabel = "vodafone_mito"
+		var eventAction = event_description;
+		
+		if (trackingEnabled){
+			console.log("TRACK - cat:" + eventCatigory + ", label:" + eventLabel + ", action:" + eventAction);
+			_gaq.push(['admaxim_tracking._trackEvent', eventCatigory, eventAction, eventLabel ]);
+
+			var url = "http://adstaging.admaxim.com/adtracker/track/app/event";
+			url += "?appId=" + admaxim_appid;
+			url += "&clickId=" + admaxim_clickid;
+			url += "&pageId=" + "PAGE_ID";
+			url += "&pageRId=" + "PAGE_R_ID";
+			url += "&eventType=" + eventAction;
+			url += "&eventData=" + "EVENT_DATA";
+
+			$('#AdMaximTrack').attr('src', url);	
+		} else {
+			console.log("NO TRACK " + eventAction);
+		}
+	}
 
 });
 
 </script>
+
 
 
 <div id='wrapper'>
@@ -103,6 +142,8 @@ $(function() {
 	<img id="end_frame" src="media/end.png" />
 
 </div>
+
+<img id="AdMaximTrack" style="position:absolute; margin:0; padding:0; top:-1; left:-1; height:1px; width:1px" />
 
 
 </body>
