--- a/agency/insurance/scripts/richMedia/expanded2.html
+++ b/agency/insurance/scripts/richMedia/expanded2.html
@@ -15,6 +15,18 @@
 
 <script>
 
+var trackingEnabled = false;
+
+var _gaq = _gaq || [];
+_gaq.push(['admaxim_tracking._setAccount', 'UA-37035980-1']);
+_gaq.push(['admaxim_tracking._trackPageview']);
+
+(function() {
+	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+
 $(function() {
 
 	var page_scale = (320/768);
@@ -35,6 +47,7 @@ $(function() {
 
 	$('#end_frame').click(function(){
 		console.log('$(#end_frame).click');
+		trackEvent('click_to_vodafone');
 		window.open('http://m.vodafone.hu/mobiltarifak/red');
 
 	});
@@ -42,8 +55,33 @@ $(function() {
 	setTimeout(function(){
 		$('#crack').hide();
 		$('#end_frame').show();
+		trackEvent('show_endframe');
 	}, 3000);
 
+
+	function trackEvent (event_description) {
+
+		var eventCatigory = "vodafone_mito_insurance";
+		var eventLabel = "vodafone_mito"
+		var eventAction = event_description;
+		
+		if (trackingEnabled){
+			console.log("TRACK - cat:" + eventCatigory + ", label:" + eventLabel + ", action:" + eventAction);
+			_gaq.push(['admaxim_tracking._trackEvent', eventCatigory, eventAction, eventLabel ]);
+
+			var url = "http://adstaging.admaxim.com/adtracker/track/app/event";
+			url += "?appId=" + admaxim_appid;
+			url += "&clickId=" + admaxim_clickid;
+			url += "&pageId=" + "PAGE_ID";
+			url += "&pageRId=" + "PAGE_R_ID";
+			url += "&eventType=" + eventAction;
+			url += "&eventData=" + "EVENT_DATA";
+
+			$('#AdMaximTrack').attr('src', url);	
+		} else {
+			console.log("NO TRACK " + eventAction);
+		}
+	}
 });
 
 </script>
