--- a/agency/simonly/index.html
+++ b/agency/simonly/index.html
@@ -31,12 +31,11 @@
 
 
 
+		var clickid = getUrlVar('clickid');
+		var appid = getUrlVar('appid');
 
-
-
-
-
-
+		var admaxim_clickid = (typeof clickid != "undefined") ? clickid : "test_clickid";
+		var admaxim_appid = (typeof appid != "undefined") ? appid : "test_appid";
 
 
 		var standalone = getUrlVar('standalone');
