--- a/insurance/index.html
+++ b/insurance/index.html
@@ -7,7 +7,7 @@
 </style>
 </head>
 <body>
-<div id="bg" style="position:absolute; top:0px; left:0px; width:320px; height:500px; background:grey"></div>
+<div id="bg" style="position:absolute; top:0px; left:0px; width:320px; height:500px; background:url(bg.jpg) 0px 46px no-repeat; background-size:320px 500px"></div>
 
 
 	<script type="text/javascript">
