--- a/insurance/scripts/richMedia/expanded.html
+++ b/insurance/scripts/richMedia/expanded.html
@@ -22,6 +22,9 @@
 		}, 100);
 	});
 
+	var standalone_from_url = getUrlVar('standalone');
+	var isStandalone = (typeof standalone_from_url != "undefined" && standalone_from_url === "yes") ? true : false;
+
 	var clickid = getUrlVar('clickid');
 	var appid = getUrlVar('appid');
 
@@ -32,6 +35,7 @@
 		var result = new RegExp(key + "=([^&]*)", "i").exec(window.location.search);
 		return (result && unescape(result[1]) || undefined);
 	}	
+
 </script>
 <div id="bg" style="position:absolute; top:0px; left:0px; width:320px; height:420px; background:url(media/loading5.gif) 10px 0px"></div>
 
