updates for tracking

--- a/agency/insurance/scripts/richMedia/expanded2.html
+++ b/agency/insurance/scripts/richMedia/expanded2.html
@@ -15,8 +15,19 @@
 
 <script>
 
-var trackingEnabled = false;
+var trackingEnabled = true;
 
+var clickid = getUrlVar('clickid');
+var appid = getUrlVar('appid');
+
+var admaxim_clickid = (typeof clickid != "undefined") ? clickid : "test_clickid";
+var admaxim_appid = (typeof appid != "undefined") ? appid : "test_appid";
+
+function getUrlVar(key){
+	var result = new RegExp(key + "=([^&]*)", "i").exec(window.location.search);
+	return (result && unescape(result[1]) || undefined);
+}
+	
 var _gaq = _gaq || [];
 _gaq.push(['admaxim_tracking._setAccount', 'UA-37035980-1']);
 _gaq.push(['admaxim_tracking._trackPageview']);
