updates for tracking and clean up

--- a/agency/insurance/index.html
+++ b/agency/insurance/index.html
@@ -21,15 +21,6 @@
 
 
 
-		var ADMAXIM_BANNER_W = 320;
-		var ADMAXIM_BANNER_H = 50;
-
-		var ADMAXIM_RICHMEDIA_W = 320;
-		var ADMAXIM_RICHMEDIA_H = 500;
-
-
-
-
 
 
 		var clickid = getUrlVar('clickid');
@@ -48,7 +39,9 @@
 			return (result && unescape(result[1]) || undefined);
 		}	
 	</script>
-    <script type="text/javascript" src="scripts/richMedia/exp.js"></script>
+
+
+    <script type="text/javascript" src="scripts/richMedia/exp_local_only.js"></script>
     <div id="AdMaximBanner" style="position:absolute; top:0px; left:0px"></div>
 
 
