--- a/agency/simonly/index.html
+++ b/agency/simonly/index.html
@@ -47,7 +47,7 @@
 			return (result && unescape(result[1]) || undefined);
 		}	
 	</script>
-    <script type="text/javascript" src="scripts/richMedia/exp.js"></script>
+    <script type="text/javascript" src="scripts/richMedia/exp_local_only.js"></script>
     <div id="AdMaximBanner" style="position:absolute; top:0px; left:0px"></div>
 
 
