exp_build.2 should all match

--- a/admaxim/insurance/index.html
+++ b/admaxim/insurance/index.html
@@ -29,11 +29,13 @@
 
 
 
-
+	var LOCAL_BANNER_URL = "scripts/richMedia/media/vodafoneinsurancebanner.gif";
 
 
 
 	</script>
+	<script type="text/javascript" src="http://adserver.admaxim.com/adserver/javascript/jquery-1.4.2.min.js" ></script>
+
     <script type="text/javascript" src="scripts/richMedia/exp.js"></script>
     <div id="AdMaximBanner" style="position:absolute; top:0px; left:0px"></div>
 
