--- a/mito/insurance/index.html
+++ b/mito/insurance/index.html
@@ -21,7 +21,7 @@
 
 
 
-
+		var LOCAL_BANNER_URL = "scripts/richMedia/media/vodafoneinsurancebanner.gif";
 
 		var clickid = getUrlVar('clickid');
 		var appid = getUrlVar('appid');
