--- a/mito/simonly/index.html
+++ b/mito/simonly/index.html
@@ -21,12 +21,7 @@
 
 
 
-		var ADMAXIM_BANNER_W = 320;
-		var ADMAXIM_BANNER_H = 50;
-
-		var ADMAXIM_RICHMEDIA_W = 320;
-		var ADMAXIM_RICHMEDIA_H = 500;
-
+		var LOCAL_BANNER_URL = "scripts/richMedia/media/vodafonesimonlybanner.gif";
 
 
 
