--- a/mito/insurance/index.html
+++ b/mito/insurance/index.html
@@ -7,7 +7,7 @@
 </style>
 </head>
 <body>	
-<div id="bg" style="position:absolute; top:0px; left:0px; width:320px; height:500px; background-size:320px 500px; background:url('scripts/richMedia/media/news_bg.jpg') 0px 50px;"></div>
+<img style="position:absolute; top:50px; left:0px; width:320px; height:500px;" src="scripts/richMedia/media/news_bg.jpg" />
 
 
 	<script type="text/javascript">
